fixed navbar link overflow issue, changed user name and avatar in nav bar, and some styling cleanup

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -168,7 +168,7 @@ input:focus, textarea:focus {
   overflow-y: auto;
   max-height: 100%;
 }
- form {
+ main form {
   position: absolute;
   bottom: 0;
   width: 100%;
